--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,48 +6,58 @@
 
 @layer base {
 	:root {
-		--background: 0 7.69% 97.45%;
-		--foreground: 17.14 6.8% 20.2%;
-		--muted: 240 4.8% 95.9%;
-		--muted-foreground: 240 3.8% 46.1%;
+		--background: 0 0% 98.46%;
+		--foreground: 252 0% 10%;
+		--muted: 0 0% 91.54%;
+		--muted-foreground: 0 0% 53.08%;
 		--popover: 0 0% 100%;
-		--popover-foreground: 17.14 6.8% 20.2%;
+		--popover-foreground: 252 0% 0%;
 		--card: 0 0% 100%;
-		--card-foreground: 17.14 6.8% 20.2%;
-		--border: 240 5.9% 90%;
-		--input: 240 5.9% 90%;
-		--primary: 17.14 6.8% 20.2%;
-		--primary-foreground: 0 0% 98%;
-		--secondary: 200 14.29% 95.88%;
-		--secondary-foreground: 17.14 6.8% 20.2%;
-		--accent: 240 4.8% 95.9%;
-		--accent-foreground: 17.14 6.8% 20.2%;
-		--destructive: 0 90.6% 70.78%;
-		--destructive-foreground: 0 0% 98%;
-		--ring: 17.14 6.8% 20.2%;
-		--radius: 1.5rem;
+		--card-foreground: 252 0% 30.77%;
+		--border: 0 0% 86.92%;
+		--input: 0 0% 74.62%;
+		--primary: 40 90% 93%;
+		--primary-foreground: 0 0% 0%;
+		--secondary: 260 100% 97%;
+		--secondary-foreground: 0 0% 0%;
+		--accent: 27.06 0% 93.85%;
+		--accent-foreground: 0 0% 0%;
+		--destructive: 0 65.31% 66.73%;
+		--destructive-foreground: 0 0% 100%;
+		--ring: 27.06 1.79% 32.5%;
+		--chart-1: 27.06 92.51% 79.46%;
+		--chart-2: 164.12 70.54% 73.89%;
+		--chart-3: 27.06 0% 93.85%;
+		--chart-4: 164.12 70.54% 76.89%;
+		--chart-5: 27.06 95.51% 79.46%;
+		--radius: 0.5rem;
 	}
 
 	.dark {
-		--background: 17.14 0% 10.77%;
-		--foreground: 0 0% 98%;
-		--muted: 240 3.7% 15.9%;
-		--muted-foreground: 240 5% 64.9%;
-		--popover: 240 10% 3.9%;
-		--popover-foreground: 0 0% 98%;
-		--card: 240 10% 3.9%;
-		--card-foreground: 0 0% 98%;
-		--border: 240 3.7% 15.9%;
-		--input: 240 3.7% 15.9%;
-		--primary: 0 7.69% 97.45%;
-		--primary-foreground: 240 5.9% 10%;
-		--secondary: 17.14 6.8% 20.2%;
-		--secondary-foreground: 0 7.69% 97.45%;
-		--accent: 240 3.7% 15.9%;
-		--accent-foreground: 0 0% 98%;
-		--destructive: 0 84.59% 65.05%;
-		--destructive-foreground: 0 0% 98%;
-		--ring: 240 4.9% 83.9%;
+		--background: 0 0% 6.27%;
+		--foreground: 252 37% 98%;
+		--muted: 0 0% 20%;
+		--muted-foreground: 0 0% 62.75%;
+		--popover: 0 0% 8.63%;
+		--popover-foreground: 252 37% 99%;
+		--card: 0 0% 6.27%;
+		--card-foreground: 252 37% 99%;
+		--border: 0 0% 15.69%;
+		--input: 0 0% 25.38%;
+		--primary: 40 90% 93%;
+		--primary-foreground: 0 0% 0%;
+		--secondary: 260 100% 97%;
+		--secondary-foreground: 0 0% 0%;
+		--accent: 27.06 0.22% 23.03%;
+		--accent-foreground: 0 0% 100%;
+		--destructive: 0 100% 75.1%;
+		--destructive-foreground: 0 0% 0%;
+		--ring: 27.06 100% 80%;
+		--chart-1: 27.06 100% 80%;
+		--chart-2: 164.12 100% 80%;
+		--chart-3: 27.06 0.22% 23.03%;
+		--chart-4: 164.12 100% 83%;
+		--chart-5: 27.06 103% 80%;
 	}
 }
 
